--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.suning.financecore</groupId>
+    <groupId>com.kylincn.financecore</groupId>
     <artifactId>checksql</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>maven-plugin</packaging>
@@ -122,15 +122,5 @@
         </plugins>
     </build>
     <distributionManagement>
-        <repository>
-            <id>nexus-releases</id>
-            <name>Suning Release Repository</name>
-            <url>http://maven.cnsuning.com/content/repositories/releases/</url>
-        </repository>
-        <snapshotRepository>
-            <id>nexus-snapshots</id>
-            <name>Suning Snapshot Repository</name>
-            <url>http://maven.cnsuning.com/content/repositories/snapshots/</url>
-        </snapshotRepository>
     </distributionManagement>
 </project>
